--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     attributes:
       user:
+        user_name: "ユーザーネーム"
         current_password: "現在のパスワード"
         email: "メールアドレス"
         password: "パスワード"
